[build-system]
  requires = [
    "setuptools",
    "setuptools_scm",
    "wheel"
  ]
  build-backend = 'setuptools.build_meta'


[project]
  name = "astropy-iers-data"
  dynamic = ["version"]
  description = "IERS Earth Rotation and Leap Second tables for the astropy core package"
  readme = "README.rst"
  requires-python = ">=3.8"
  license = {file = "LICENSE.rst"}
  keywords = ["astropy", "data", "IERS"]
  authors = [
    {name = "Astropy Developers", email = "astropy.team@gmail.com"}
  ]
  classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
  ]

[project.urls]
  repository = "https://github.com/astropy/astropy-iers-data"
  documentation = "https://github.com/astropy/astropy-iers-data/blob/main/README.rst"

[project.optional-dependencies]
  test = [
    "pytest",
    "pytest-remotedata",
    "hypothesis",
  ]
  docs = [
    "pytest"
  ]


[tool.setuptools_scm]
write_to = "astropy_iers_data/_version.py"
