[metadata]
name = astropy_iers_data
author = Astropy Developers
author_email = 
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/astropy/astropy-iers-data
description = IERS and Leap Second tables for the astropy core package
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires = 



[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "astropy_iers_data" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  astropy_iers_data/__init*
  astropy_iers_data/conftest.py
  astropy_iers_data/*setup_package*
  astropy_iers_data/tests/*
  astropy_iers_data/*/tests/*
  astropy_iers_data/extern/*
  astropy_iers_data/version*
  */astropy_iers_data/__init*
  */astropy_iers_data/conftest.py
  */astropy_iers_data/*setup_package*
  */astropy_iers_data/tests/*
  */astropy_iers_data/*/tests/*
  */astropy_iers_data/extern/*
  */astropy_iers_data/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
