[metadata]
name = astropy_iers_data
author = Astropy Developers
author_email =
license = BSD 3-Clause
license_file = licenses/LICENSE.rst
url = https://github.com/astropy/astropy-iers-data
description = IERS and Leap Second tables for the astropy core package
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =

[options.extras_require]
test =
    pytest
docs =
    sphinx
